--- a/src/Components/Styles/Style.css
+++ b/src/Components/Styles/Style.css
@@ -1,7 +1,24 @@
-.header{
+.header {
     background-image: url(../../images/bg.png);
     background-repeat: no-repeat;
     background-size: cover;
     background-position: center;
-    
+
+
+}
+
+
+.awards {
+    /* background-image: url(../../images/Rectangle/4241.png);
+    background-repeat: no-repeat;
+    background-size: cover;
+    background-position: center; */
+
+    background: rgba(255, 255, 255, 0.53);
+    border: 1px solid rgba(0, 0, 0, 0.1);
+    backdrop-filter: blur(40px);
+    /* Note: backdrop-filter has minimal browser support */
+
+    border-radius: 10px;
+
 }
