laptop scroll in the window

--- a/src/Components/Styles/Style.css
+++ b/src/Components/Styles/Style.css
@@ -27,8 +27,9 @@
 .menu {
     background-image: url(../../images/manu.png);
     background-repeat: no-repeat;
-    background-size: 100%;
+   
     background-position: center;
+    background-size: cover;
     
 }
 
